--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,7 +112,7 @@ jobs:
       - run:
           name: Deploy to Heroku
           command: |
-            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git deploy_on_heroku_docker:master
   
   section_11_build_and_push_to_heroku_docker:
     <<: *defaults
@@ -160,7 +160,7 @@ workflows:
       - section_11_build_and_push_to_heroku_docker:
           requires:
             - train_and_upload_regression_model
-          filters:
-            branches:
-              only:
-                - master
+          #filters:
+          #  branches:
+          #    only:
+          #      - master
